--- a/Resources/css/style.css
+++ b/Resources/css/style.css
@@ -1,8 +1,153 @@
-*{
-  background-color: white;
-  font-family: 'Space Mono';
-  color: hsl(273, 100%, 91%);
+a {
+	text-decoration: none;
 }
+ul {
+	padding-left: 2.5rem;
+}
+li {
+	list-style: none;
+}
+* {
+	box-sizing: border-box;
+}
+body {
+	 font-family: 'Space Mono';
+}
+::selection {
+	background-color: #EBEBF2;
+	color: #83828D;
+}
+
+
+/* Navigation */
+
+.menu-wrap {
+	background-color: none;
+	position: fixed;
+	top: 8rem;
+	height: 100%;
+	width: 20%;
+	margin-left: -20%;
+	font-size: 2.3em;
+	font-weight: 700;
+	overflow: auto;
+	transition: .25s;
+	z-index: 10;
+}
+.menu-show {
+	margin-left: 0;
+
+}
+.menu-sidebar {
+	margin: 75px 0 80px 10px;
+	position: relative;
+	top: 70px;
+}
+.menu-sidebar li {
+	padding: 18px 22px 0;
+}
+.menu-sidebar li > a {
+	color: black;
+	font-size: 1.18em;
+	position: relative;
+}
+
+
+.menu-sidebar li > a::after {
+	content: "";
+	display: block;
+	height: 0.15em;
+	position: absolute;
+	top: 100%;
+	width: 100%;
+	left: 50%;
+	transform: translate(-50%);
+	background-image: linear-gradient(to right, transparent 50.3%, orange 50.3%);
+	transition: background-position .2s .1s ease-out;
+	background-size: 200% auto;
+}
+.menu-sidebar li > a:hover::after {
+	background-position: -100% 0;
+}
+.menu-sidebar .menu-item-has-children {
+	position: relative;
+}
+.menu-sidebar .menu-item-has-children .sub-menu {
+	display: none;
+}
+.sidebar-menu-arrow::after {
+	content: "\f107";
+	font-family: 'FontAwesome';
+	padding: 10px;
+	color: black;
+	position: relative;
+}
+.sidebar-menu-arrow:hover::after {
+	cursor: pointer;
+	color: #fff;
+}
+.sidebar-menu-arrow:active::after {
+	top: 2px;
+}
+
+
+/*Hamburger Button*/
+.toggle-button {
+	position: fixed;
+	width: 10%;
+	height: 10%;
+	top: 5%;
+	left: 2%;
+	padding: 2%;
+	transition: .25s;
+	z-index: 15;
+}
+.toggle-button:hover {
+	cursor: pointer;
+}
+.toggle-button .menu-bar {
+	position: absolute;
+	border-radius: 2px;
+	width: 80%;
+	transition: .5s;
+}
+.toggle-button .menu-bar-top {
+	border: 2rem solid #9933ff;
+	border-bottom: none;
+	top: 0;
+}
+.toggle-button .menu-bar-middle {
+	height: 2rem;
+	background-color: #9933ff;
+	margin-top: 1rem;
+	margin-bottom: 1rem;
+	top: 2rem;
+}
+.toggle-button .menu-bar-bottom {
+	border: 3rem solid #00cc00;
+	border-top: none;
+	top: 5rem;
+}
+.button-open {
+	left: 10%;
+}
+.button-open .menu-bar-top {
+	border-color: #9933ff;
+	transform: rotate(45deg) translate(8px, 8px);
+	transition: .5s;
+}
+.button-open .menu-bar-middle {
+	background-color: #fff;
+	transform: translate(230px);
+	transition: .1s ease-in;
+	opacity: 0;
+}
+.button-open .menu-bar-bottom {
+	border-color: #00cc00;
+	transform: rotate(-45deg) translate(7px, -7px);
+	transition: .5s;
+}
+
 
 .container{
   background-color: white;
@@ -20,7 +165,7 @@
   border: 10px solid LimeGreen;
   position: absolute;
   top: 15%;
-  left: 30%;
+  left: 35%;
   z-index: 10;
   font-size: 2em;
   transition-property: background-color;
@@ -47,7 +192,7 @@ a.fill-div1 {
   border: 10px solid rgb(0, 128, 0);
   position: absolute;
   top: 15%;
-  left: 30%;
+  left: 35%;
   z-index: 9;
   transition-property: background-color;
   transition-duration: 750ms;
@@ -67,7 +212,7 @@ a.fill-div1 {
   border: 10px solid hsl(318, 100%, 60%);
   position: absolute;
   top: 15%;
-  left: 30%;
+  left: 35%;
   z-index: 8;
   transition-property: background-color;
   transition-duration: 750ms;
@@ -94,7 +239,7 @@ a.fill-div3 {
   border: 10px solid hsl(41, 99%, 49%);
   position: absolute;
   top: 15%;
-  left: 30%;
+  left: 35%;
   z-index: 7;
   transition-property: background-color;
   transition-duration: 750ms;
@@ -113,7 +258,7 @@ a.fill-div3 {
   border: 10px solid hsl(209, 100%, 50%);
   position: absolute;
   top: 15%;
-  left: 30%;
+  left: 35%;
   z-index: 6;
   transition-property: background-color;
   transition-duration: 750ms;
@@ -139,7 +284,7 @@ a.fill-div5 {
   border: 10px solid hsl(157, 99%, 49%);
   position: absolute;
   top: 15%;
-  left: 30%;
+  left: 35%;
   z-index: 5;
   transition-property: background-color;
   transition-duration: 750ms;
@@ -165,7 +310,7 @@ a.fill-div6 {
   border: 10px solid pink;
   position: absolute;
   top: 15%;
-  left: 30%;
+  left: 35%;
   z-index: 4;
   transition-property: background-color;
   transition-duration: 750ms;
@@ -183,7 +328,7 @@ a.fill-div6 {
   border: 10px solid pink;
   position: absolute;
   top: 15%;
-  left: 30%;
+  left: 35%;
   z-index: 3;
   transition-property: background-color;
   transition-duration: 750ms;
@@ -201,7 +346,7 @@ a.fill-div6 {
   border: 10px solid pink;
   position: absolute;
   top: 15%;
-  left: 30%;
+  left: 35%;
   z-index: 2;
   transition-property: background-color;
   transition-duration: 750ms;
@@ -228,7 +373,7 @@ a.fill-div9 {
   border: 10px solid pink;
   position: absolute;
   top: 15%;
-  left: 30%;
+  left: 35%;
   z-index: 1;
   transition-property: height;
   transition-duration: 750ms;
@@ -241,25 +386,9 @@ a.fill-div9 {
 
 
 
-h1{
-  padding-left: 20px;
-}
-
-
-h1 a{
- color: hsl(273, 95%, 50%);
-}
-
-
-
-h1 a:hover{
-  color: limegreen;
-}
-
-
 
 .footer{
-  margin-top: 1100px;
+  margin-top: 1200px;
   margin-right: 50px;
   display: flex;
 justify-content: flex-end;
